--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
 
         <h2>Peer Evaluation</h2>
 
-        <!-- Peer 1 -->
         <h3>Peer 1 Evaluation</h3>
         <div class="peer-name">
             <input type="text" placeholder="First Name" required>
@@ -128,7 +127,6 @@
             </tr>
         </table>
 
-        <!-- Peer 2 -->
         <h3>Peer 2 Evaluation</h3>
         <div class="peer-name">
             <input type="text" placeholder="First Name" required>
@@ -179,7 +177,6 @@
             </tr>
         </table>
 
-        <!-- Peer 3 -->
         <h3>Peer 3 Evaluation</h3>
         <div class="peer-name">
             <input type="text" placeholder="First Name" required>
@@ -230,7 +227,6 @@
             </tr>
         </table>
 
-        <!-- Peer 4 -->
         <h3>Peer 4 Evaluation</h3>
         <div class="peer-name">
             <input type="text" placeholder="First Name" required>
@@ -282,5 +278,5 @@
         </table>
 
         <button type="submit">Submit Evaluation</button>
-        
+        <script src="script.js"></script>
     </form>
